tests/lex-fail/char_lit_no_quote.fl.0.exp
Error: char_lit_no_quote.fl(1,1): Missing terminating single quote for character literal
'a
^  
